# HCC-Example-Application

./: .gitignore  CMakeLists.txt  README.md
ArrayBandwidth/: ArrayBandwidth.cpp  ArrayBandwidth.cpp~  ArrayBandwidth.hpp  ArrayBandwidth.hpp~  CMakeLists.txt  CMakeLists.txt~  HCUtil.hpp~
BitonicSort-CL-from-HCC/: BitonicSort_Kernels.cl  BitonicSort_hcc.cpp  BitonicSort_hcc.hpp  Makefile  README.md  embed_hsaco.sh  hsa_utils.cpp  hsa_utils.hpp
HCFFT/: CMakeLists.txt  CMakeLists.txt~  FFT.cpp  FFT.cpp~  FFT.hpp  FFT.hpp~
ListDevices/: CMakeLists.txt  ListDevices.cpp
MD/: CMakeLists.txt  CMakeLists.txt~  MD.cpp  MD.cpp~  MD.hpp  MD.hpp~
SPMV/: CMakeLists.txt  CMakeLists.txt~  SPMV.cpp  SPMV.cpp~  SPMV.h  SPMV.h~
SyncVsAsyncArrayCopy/: CMakeLists.txt  CMakeLists.txt~  SyncVsAsyncArrayCopy.cpp  SyncVsAsyncArrayCopy.cpp~  SyncVsAsyncArrayCopy.hpp
include/SDKUtil/: AMPUtil.hpp~  HCUtil.hpp  SDKUtil.hpp
